# starkgate-contracts

./: .gitignore  .npmignore  .prettierrc  CMakeLists.txt  CMakeLists_common.txt  Dockerfile  LICENSE  README.md  SECURITY.md  build.sh  cairo_project.toml  package.json  requirements.txt
.dep/: starkware-solidity-dependencies.tar
.github/workflows/: ci.yml  fund_user.yml  npm-publish.yaml  release.yaml  release.yml
bazel_utils/: extract_artifacts.py  pytest_wrapper.py
cairo/: .gitignore  README.md  node.json  requirements.txt
cairo/artifacts/: ERC20.json  ERC20_base.json  IERC20.json  Initializable_interface.json  finalizable.json  governance.json  impl_contract_a.json  impl_contract_b.json  initializable.json  mintable_token_interface.json  permitted.json  proxy.json  proxy_impl.json  test_eic.json  token_bridge.json  token_bridge_interface.json
cairo/contracts/: token_bridge.cairo  token_bridge_interface.cairo
cairo/scripts/: deploy_bridge.py  deploy_lib.py  deploy_usdc.py  proxy_config.py  setup_bridge.py  track_l2_message.py  utils.py  validate_deposit.py  withdraw_from_bridge.py
cairo/test/: ERC20_test.py  bridge_test.py  conftest.py  contracts_bridge.py  contracts_erc20.py  contracts_proxy.py  governance_test.py  test_contracts.py  test_utils.py  upgradability_proxy_test.py  utils.py
scripts/: build-cairo.sh  build-solidity.sh  cairo-format.py  cairo-test.py  extract_artifacts.py  line_length.py  parent_branch.txt  release_tar.sh  requirements-deps.json  requirements-gen.txt  requirements.txt  run_prettier.py  script_utils.py  setup.sh  starknet-compile.py  tests.sh
solidity/: .gitignore  README.md  brownie-config.yaml  requirements.txt  truffle-config.js
solidity/contracts/: StarknetBridgeConstants.sol  StarknetERC20Bridge.sol  StarknetERC20BridgeTester.sol  StarknetEthBridge.sol  StarknetEthBridgeTester.sol  StarknetTokenBridge.sol  StarknetTokenStorage.sol  Transfers.sol
solidity/scripts/: check_balance.py  deploy.py  deploy_bridge.py  deploy_local.py  deploy_usdc.py  deposit_on_bridge.py  fund_user.py  mint_tokens.py  update_bridge_limits.py  upgrade_bridge.py  verify_contracts.py  withdraw.py
solidity/tests/: conftest.py  copy_starkgate_artifacts.py  flow_test.py  starknet_test_utils.py  test_contracts.py  token_bridge_storage_test.py  token_bridge_test.py  utils.py
src/: CMakeLists.txt  cairo_project.toml
src/cairo/: access_control_interface.cairo  erc20_interface.cairo  err_msg.cairo  legacy_bridge_eic.cairo  legacy_bridge_tester.cairo  legacy_eic_test.cairo  lib.cairo  mintable_lock_interface.cairo  mintable_token_interface.cairo  openzeppelin.cairo  permissioned_erc20.cairo  permissioned_token_test.cairo  receiver_interface.cairo  replaceability_interface.cairo  replaceability_test.cairo  roles_init_eic.cairo  roles_interface.cairo  roles_test.cairo  set_as_single_eic.cairo  strk.cairo  stub_msg_receiver.cairo  test_utils.cairo  token_bridge.cairo  token_bridge_admin_test.cairo  token_bridge_interface.cairo  token_bridge_test.cairo  token_test_setup.cairo  token_test_setup_interface.cairo  update712_eic_tester.cairo  update_712_vars_eic.cairo
src/cmake_utils/: gen_venv.py  pip_rules.cmake  python_rules.cmake
src/openzeppelin/: account.cairo  lib.cairo  token.cairo  utils.cairo
src/solidity/: ConfigureSingleBridgeEIC.sol  ERC2771Recipient.sol  Fees.sol  FeltToStrTester.sol  IERC2771Recipient.sol  IStarkgateBridge.sol  IStarkgateManager.sol  IStarkgateRegistry.sol  IStarkgateService.sol  LegacyBridge.sol  SelfRemoveTester.sol  StarkgateConstants.sol  StarkgateManager.sol  StarkgateRegistry.sol  StarkgateUpgradeAssistExternalInitializer.sol  (+20 more)
src/starkware/starknet/apps/starkgate/: CMakeLists.txt  conftest.py  copy_starkgate_artifacts.py  flow_test.py
src/starkware/starknet/apps/starkgate/cairo/: CMakeLists.txt  ERC20.cairo  ERC20_base.cairo  bridge_test.py  contracts.py  permitted.cairo  token_bridge.cairo  token_bridge_interface.cairo  token_test.py
src/starkware/starknet/apps/starkgate/eth/: CMakeLists.txt  StarknetERC20Bridge.sol  StarknetERC20BridgeTester.sol  StarknetEthBridge.sol  StarknetEthBridgeTester.sol  StarknetTokenBridge.sol  StarknetTokenStorage.sol  Transfers.sol  contracts.py  token_bridge_storage_test.py  token_bridge_test.py
src/starkware/starknet/apps/starkgate/solidity/: CMakeLists.txt  StarknetERC20Bridge.sol  StarknetEthBridge.sol  StarknetTokenBridge.sol  StarknetTokenStorage.sol  Transfers.sol  contracts.py
(+109 files in other folders)
